* GWTAPP-114
Cleanup pom.xml files