@@ -2,18 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.gwtapp</groupId>
 		<artifactId>startapp</artifactId>
 		<version>1.3.0</version>
 	</parent>
-	
+
 	<artifactId>startapp-web</artifactId>
 	<name>startapp-web</name>
-	
+
 	<packaging>war</packaging>
-	
+
 	<developers>
 		<developer>
 			<id>cuprum</id>
@@ -21,7 +21,7 @@
 			<email>r.olesiak@gmail.com</email>
 		</developer>
 	</developers>
-	
+
 	<dependencies>
 		<!-- StartApp -->
 		<dependency>
@@ -48,6 +48,12 @@
 		<!-- GWT -->
 		<dependency>
 			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-user</artifactId>
+			<version>${gwt.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-dev</artifactId>
 			<version>${gwt.version}</version>
 			<scope>provided</scope>
@@ -57,6 +63,7 @@
 			<groupId>com.wideplay.warp</groupId>
 			<artifactId>warp-persist</artifactId>
 			<version>${warp.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- Test -->
 		<dependency>
@@ -149,9 +156,9 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
-		<outputDirectory>war/WEB-INF/classes</outputDirectory>		
+		<outputDirectory>war/WEB-INF/classes</outputDirectory>
 		<resources>
 			<resource>
 				<directory>src/main/java</directory>
@@ -172,8 +179,27 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<optionSets>
+						<optionSet>
+							<id>default</id>
+							<options>
+								<option>-XX:MaxPermSize=128m</option>
+							</options>
+						</optionSet>
+						<optionSet>
+							<id>morememory</id>
+							<options>
+								<option>-Xmx512m</option>
+								<option>-XX:MaxPermSize=128m</option>
+							</options>
+						</optionSet>
+					</optionSets>
+				</configuration>
+			</plugin>
+			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
-				<version>${maven.clean.plugin.version}</version>
 				<configuration>
 					<filesets>
 						<fileset>
@@ -208,7 +234,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>${maven.war.plugin.version}</version>
 				<configuration>
 					<webappDirectory>war</webappDirectory>
 				</configuration>
